Looks like the "Mon Compte" page is done

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -27,8 +27,8 @@
       <ion-item>
         <div style="display: flex; flex-flow: column; align-items: flex-start;
           justify-content: flex-start; margin-bottom: 0.7em;">
-          <h1 style="margin: 0; padding: 0;">Matthieu NOEL</h1>
-          <p style="margin: 0; padding: 0;">(matthieunoel@gmail.com)</p>
+          <h1 style="margin: 0; padding: 0;">{{ gsbMainService.data.login }}</h1>
+          <p style="margin: 0; padding: 0;">({{ gsbMainService.data.email }})</p>
         </div>
       </ion-item>
       <ion-item>
